<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/edit_text_email_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_addr"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edit_text_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_text_password"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/edit_text_number_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/hint_number_password"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/edit_text_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_multiline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/text_hint"
        android:inputType="textMultiLine"
        android:maxLines="2"/>

    <EditText
        android:id="@+id/edit_text_cap_sentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
        android:hint="@string/text_hint"
        android:autofillHints=""
        android:maxLines="3" />

    <EditText
        android:id="@+id/edit_text_action_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_action_send"
        android:imeOptions="actionSend"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_1"
        android:textAllCaps="false" />

</LinearLayout>